// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> should render checkbox 1`] = `
<DocumentFragment>
  <div
    class="c-dMoIJA c-TAzET"
  >
    <label
      class="c-iKAemi"
      for="checkbox"
    >
      Checkbox
    </label>
    <input
      id="checkbox"
      name="checkbox"
      type="checkbox"
    />
  </div>
</DocumentFragment>
`;

exports[`<Checkbox /> should render checked checkbox 1`] = `
<DocumentFragment>
  <div
    class="c-dMoIJA c-TAzET"
  >
    <label
      class="c-iKAemi"
      for="checkbox"
    >
      Checkbox
    </label>
    <input
      checked=""
      id="checkbox"
      name="checkbox"
      type="checkbox"
    />
  </div>
</DocumentFragment>
`;
